email fun to class

--- a/ooma-automation/ooma/homemonitoring/setup/report.html
+++ b/ooma-automation/ooma/homemonitoring/setup/report.html
@@ -4,6 +4,7 @@
     <TR bgcolor="yellow">
         <TD>Sl No </TD> <TD>Test Case</TD> <TD>Result</TD> <TD>Comments</TD>
     </TR>
+      @outputstring
   </TABLE>
  </BODY>
 </HTML>
