modifying the HTML file

--- a/ooma-automation/ooma/homemonitoring/setup/report.html
+++ b/ooma-automation/ooma/homemonitoring/setup/report.html
@@ -1,10 +1,14 @@
 <HTML>
  <BODY>
+   <p>Hello HMS Folks,</p>
+  <p>  Please find the HMS Status report below.</p>
   <TABLE Border = "1" Cellpadding = "5" Cellspacing = "5" >
     <TR bgcolor="yellow">
         <TD>Sl No </TD> <TD>Test Case</TD> <TD>Result</TD> <TD>Comments</TD>
     </TR>
       @outputstring
   </TABLE>
+   <p>Thanks for looking into the logs.</p>
+  <p> -Sensor Robo</p>
  </BODY>
 </HTML>
