modifying the HTML file

--- a/ooma-automation/ooma/homemonitoring/setup/report.html
+++ b/ooma-automation/ooma/homemonitoring/setup/report.html
@@ -4,7 +4,7 @@
   <p>  Please find the HMS Status report below.</p>
   <TABLE Border = "1" Cellpadding = "5" Cellspacing = "5" >
     <TR bgcolor="yellow">
-        <TD>Sl No </TD> <TD>Test Case</TD> <TD>Result</TD> <TD>Comments</TD>
+        <TD>Sl No </TD> <TD>Test Case</TD> <TD>Result</TD>
     </TR>
       @outputstring
   </TABLE>
