modifying the HTML file

--- a/ooma-automation/ooma/homemonitoring/setup/report.html
+++ b/ooma-automation/ooma/homemonitoring/setup/report.html
@@ -2,6 +2,9 @@
  <BODY>
    <p>Hello HMS Folks,</p>
   <p>  Please find the HMS Status report below.</p>
+  <p>
+      @setupstring
+  </p>
   <TABLE Border = "1" Cellpadding = "5" Cellspacing = "5" >
     <TR bgcolor="yellow">
         <TD>Sl No </TD> <TD>Test Case</TD> <TD>Result</TD>
